--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,24 @@ body {
 	overflow-x: hidden;
 }
 
+::selection {
+	background-color: #d1a954;
+	color: #333333;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background: #1a1a1a;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #d1a954;
+	border-radius: 3px;
+}
+
 @layer utilities {
 	.text-balance {
 		text-wrap: balance;
