--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
 	overflow-x: hidden;
 }
 
@@ -42,4 +41,81 @@ body {
 	to {
 		transform: rotate(360deg);
 	}
+}
+
+@font-face {
+	font-family: 'YaldeviColombo';
+	src: url('./fonts/YaldeviColombo-ExtraLight.ttf') format('truetype');
+	font-weight: 200;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'YaldeviColombo';
+	src: url('./fonts/YaldeviColombo-Light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'YaldeviColombo';
+	src: url('./fonts/YaldeviColombo-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'YaldeviColombo';
+	src: url('./fonts/YaldeviColombo-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'YaldeviColombo';
+	src: url('./fonts/YaldeviColombo-SemiBold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'YaldeviColombo';
+	src: url('./fonts/YaldeviColombo-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'WixMadeforDisplay';
+	src: url('./fonts/WixMadeforDisplay-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'WixMadeforDisplay';
+	src: url('./fonts/WixMadeforDisplay-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'WixMadeforDisplay';
+	src: url('./fonts/WixMadeforDisplay-SemiBold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'WixMadeforDisplay';
+	src: url('./fonts/WixMadeforDisplay-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'WixMadeforDisplay';
+	src: url('./fonts/WixMadeforDisplay-ExtraBold.ttf') format('truetype');
+	font-weight: 800;
+	font-style: normal;
 }
